fix poems on mobile

--- a/src/app/components/PoemTile/PoemTile.module.css
+++ b/src/app/components/PoemTile/PoemTile.module.css
@@ -1,3 +1,3 @@
 .body {
-  white-space: pre;
+  white-space: pre-wrap;
 }
